--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #1a1818; /* slightly lighter dark for popup effect */
+  background-color: #2e2c2c; /* slightly lighter dark for popup effect */
   color: #fff;
   min-height: 100vh;
   display: flex;
@@ -52,10 +52,10 @@ body {
   bottom: 15px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #2c2c2c;
+  background-color: #1d1c1c;
   padding: 10px 15px;
   border-radius: 30px; /* iPhone island style */
-  box-shadow: 0 6px 15px rgba(255,255,255,0.1);
+  box-shadow: 0 6px 15px rgba(201, 191, 191, 0.1);
   width: 90%;
   max-width: 500px;
   z-index: 10;
