--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #2e2c2c;
+  background-color: #363636;
   color: #fff;
   min-height: 100vh;
   display: flex;
@@ -104,7 +104,7 @@ input, select {
   border-radius: 8px;
   border: none;
   outline: none;
-  background-color: #2c2c2c;
+  background-color: #0f0f0f;
   color: #fff;
 }
 
